hphp/test/zend/bad/ext/curl/tests/bug61948.php
<?php
  $ch = curl_init();
  var_dump(curl_setopt($ch, CURLOPT_COOKIEFILE, ""));
  var_dump(curl_setopt($ch, CURLOPT_COOKIEFILE, "/tmp/foo"));
  var_dump(curl_setopt($ch, CURLOPT_COOKIEFILE, "/xxx/bar"));
  curl_close($ch);
?>